# numpy-flint-arb

./: .all-contributorsrc  .copier-answers.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/instructions/: acb.instructions.md  array-api-elementwise.instructions.md
.github/workflows/: ci.yml
docs/: conf.py  index.md  installation.md  usage.md
src/numpy_flint_arb/: __init__.py  _main.py  main.py
tests/: test_coverage.py  test_main.py
