[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77.0.3" ]

[project]
name = "numpy-flint-arb"
version = "1.4.1"
description = "Arbitrary precision ball arithmetic (interval arithmetic) dtype in NumPy"
readme = "README.md"
license = "MIT"
authors = [
  { name = "34j", email = "34j.95a2p@simplelogin.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "cm-time>=0.1.2",
  "numpy>=2.2.6",
  "python-flint>=0.6",
  "types-array-api>=1.2",
]
urls."Bug Tracker" = "https://github.com/34j/numpy-flint-arb/issues"
urls.Changelog = "https://github.com/34j/numpy-flint-arb/blob/main/CHANGELOG.md"
urls.documentation = "https://numpy-flint-arb.readthedocs.io"
urls.repository = "https://github.com/34j/numpy-flint-arb"

[dependency-groups]
dev = [
  "coverage",
  "hypothesis>=6.151.9",
  "ndindex>=1.10.1",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-env>=1.2",
  "pytest-json-report>=1.5",
  "sybil>=9.3",
]
docs = [
  "furo; python_version>='3.12'",
  "myst-parser; python_version>='3.12'",
  "sphinx==9.*; python_version>='3.12'",
  "sphinx-autobuild; python_version>='3.12'",
]

[tool.ruff]
line-length = 100
format.preview = true
format.docstring-code-format = true
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D205",
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."docs/conf.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "numpy_flint_arb", "tests" ]
lint.preview = true

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
  "docs/.*",
  "setup.py",
]
overrides = [
  { module = "tests.*", allow_untyped_defs = true },
  { module = "docs.*", ignore_errors = true },
]

[tool.pytest]
minversion = "9.0"
addopts = [
  "-v",
  "-Wonce",
  "-p no:doctest",
  "--cov=numpy_flint_arb",
  "--cov-report=term",
  "--cov-report=xml",
]
pythonpath = [ "src" ]

[tool.pytest_env]
ARRAY_API_TESTS_MODULE = "numpy_flint_arb.np"
ARRAY_API_TESTS_SKIP_DTYPES = "float32,complex64,uint16,uint32,uint64,int8,int16,int32,int64"

[tool.coverage]
run.branch = true
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.exclude_lines = [
  "@overload",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/numpy_flint_arb/__init__.py:__version__",
  "docs/conf.py:release",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
branches.main.match = "main"
branches.noop.match = "(?!main$)"
branches.noop.prerelease = true
changelog.exclude_commit_patterns = [
  "chore(?:\\([^)]*?\\))?: .+",
  "ci(?:\\([^)]*?\\))?: .+",
  "refactor(?:\\([^)]*?\\))?: .+",
  "style(?:\\([^)]*?\\))?: .+",
  "test(?:\\([^)]*?\\))?: .+",
  "build\\((?!deps\\): .+)",
  "Merged? .*",
  "Initial [Cc]ommit.*",         # codespell:ignore
]
changelog.environment.keep_trailing_newline = true
